Uploaded image to s3

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT=5000
 MONGODB_URL=MONGODB_URL
 JWT_SECRET=puppy
 JWT_EXPIRY=1d
+
+S3_ACCESS_KEY
+S3_SECRET_ACCESS_KEY
+S3_BUCKET_NAME
+S3_REGION
