--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "willis",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -23,5 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongose": "^0.0.2-security",
     "moongose": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.10"
   }
 }
