--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "formidable": "^3.5.4",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongose": "^0.0.2-security",
