--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ S3_ACCESS_KEY
 S3_SECRET_ACCESS_KEY
 S3_BUCKET_NAME
 S3_REGION
+
+SMTP_MAIL_HOST=smtp.mailtrap.io
+SMTP_MAIL_PORT=2525
+SMTP_MAIL_USERNAME=yourusername
+SMTP_MAIL_PASSWORD=yourpassword
+SMTP_SENDER_EMAIL=some@mailtrap.com
+
