--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongose": "^0.0.2-security",
-    "moongose": "^1.0.0"
+    "moongose": "^1.0.0",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/node": "^24.0.10"
