--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ SMTP_MAIL_USERNAME=yourusername
 SMTP_MAIL_PASSWORD=yourpassword
 SMTP_SENDER_EMAIL=some@mailtrap.com
 
+MPESA_CONSUMER_KEY
+MPESA_CONSUMER_SECRET
+MPESA_ENVIRONMENT=production
+
