--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "willis",
   "license": "ISC",
   "dependencies": {
+    "@safaricom-et/mpesa-node-js-sdk": "^1.0.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -25,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongose": "^0.0.2-security",
     "moongose": "^1.0.0",
+    "mpesa-node": "^0.1.3",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
